tests-system/rbt-quantification-object/output
(forall char in a => char != "a"), warning "a should not contain the letter a"
                ^ rbt-quantification-object/foo.rsl:8: error: you can only quantify over arrays
Processed 1 model, 0 checks and 0 requirement files and found 1 error
